@@ -3,8 +3,8 @@
 % Copyright 2015 R Core Team
 % Distributed under GPL 2 or later
 
-\name{curlVersion}
-\alias{curlVersion}
+\name{libcurlVersion}
+\alias{libcurlVersion}
 \title{
   Report Version of libcurl
 }
@@ -12,20 +12,21 @@
   Report version of \code{libcurl} in use.
 }
 \usage{
-curlVersion()
+libcurlVersion()
 }
 \value{
   A character string, with value the \code{libcurl} version in use, or
-  \code{""} if none is.  If libcurl is available, has attributes
+  \code{""} if none is.  If \code{libcurl} is available, has attributes
 
   \item{ssl_version}{A character string naming the SSL version, possibly
   \code{"none"}.}
-  \item{libssh_version}{A character string naming the libssh version.}
+  \item{libssh_version}{A character string naming the libssh version,
+    which may or may not be available.}
   \item{protocols}{A character vector of the names of supported protocols.}
 }
 \seealso{
   \code{\link{extSoftVersion}} for versions of other third-party software.
 }
 \examples{
-curlVersion()
+libcurlVersion()
 }
