@@ -948,6 +948,7 @@ FUNTAB R_FunTab[] = {
 
     {"eSoftVersion", do_eSoftVersion, 0, 11, 0, {PP_FUNCALL, PREC_FN, 0}},
     {"curlVersion", do_curlVersion, 0, 11, 0, {PP_FUNCALL, PREC_FN, 0}},
+    {"curlGetHeaders", do_curlGetHeaders, 0, 11, 3, {PP_FUNCALL, PREC_FN, 0}},
 
     {NULL, NULL, 0, 0, 0, {PP_INVALID, PREC_FN, 0}},
 };
